syntax = "proto3";

package Protos;

// The sender must set sensor_payload_type to the full message name
// (e.g., "Protos.IMUData" or "Protos.PPGData") before serializing.
message SensorData {
    string pacifier_id = 1;
    string sensor_type = 2;          // For human readability
    string sensor_group = 3;
    string sensor_payload_type = 4;  // Fully qualified type name
    map<string, bytes> data_map = 5;
}

message IMUData {
    message Gyro {
        float gyro_x = 1;
        float gyro_y = 2;
        float gyro_z = 3;
    }
    repeated Gyro gyros = 1;

    message Mag {
        float mag_x = 1;
        float mag_y = 2;
        float mag_z = 3;
    }
    repeated Mag mags = 2;

    message Acc {
        float acc_x = 1;
        float acc_y = 2;
        float acc_z = 3;
    }
    repeated Acc accs = 3;
}

message PPGData {
    message Led {
        int32 led_1 = 1;
        int32 led_2 = 2;
        int32 led_3 = 3;
    }
    repeated Led leds = 1;

    message Temperature {
        float temperature = 1;
    }
    repeated Temperature temperatures = 2;
}
